tree.css
.node {
	position: relative;
	margin-top: 15px;
	margin-left: 1em;
	display: block;
	width: 400px;
}

body{
	background: rgb(40,40,40);
}

input[type=input], input[type=password] {
	background: transparent;
	border: 1px solid rgb(60,60,60);
	margin: 2px;
}

.textinput{
	border-top: 0px;
	border-bottom: 1px solid rgba(170,170,170,0.55);
	border-left: 0px;
	border-right: 0px;
	padding: 0.1em;
	width: 10em;
	min-height: 1em;
	font-size: medium;
	word-wrap: break-word;
	transition: 0.31s linear;
}

.textinput:focus{
	outline: 0px solid transparent;
	border-bottom: 3px solid rgba(170,170,170,0.55);
	transition: 0.3s linear;
}
#root {
	min-width: 500px;
	padding: 20px;
	box-shadow: 2px 2px 5px 6px #222;
}


body, input[type=password]{
    color: rgb(170,170,170);
    font-family: sans-serif;
}

.hidden{
    max-height: 0px;
    overflow: hidden;
    transition: 0.3s linear;
    -webkit-transition: 0.3s linear;
}

.visible{
    max-height: 400px;
    transition: 0.3s ease-out;
    -webkit-transition: 0.3s ease-out;
}

.hidbutton:after, .hidbutton-show:after, .hidbutton-show:before{
    background: rgb(160,160,160);
}

.header {
    display: flex;
    min-height: 1em;
    flex-direction: row;
    align-items: top;
    left: 0px;
    bottom:  0px;
}
.root-header {
	height: 30px;
}

.button{
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    text-align: center;
    cursor: pointer;
}

.active-btn{
    display: flex;
    width: 18px;
    height: 18px;
    transition: 0.5s ease-in-out;
    -webkit-transition: 0.5s ease-in-out;
}

.butbox {
    display: flex;
    flex-direction: row;
    position: relative;
    height: 1em;
    /*left: -2px;
    top: -0;*/
    transition: 0.1s;
    -webkit-transition: 0.1s;
    z-index: 1;
}

.butbox:hover{
    transform: scale(1.6);
    -webkit-transform: scale(1.6);
    transition: 0.1s linear;
    -webkit-transition: 0.1s linear;
}

.butbox:hover .button{
    position: relative;
    margin-left: 5px;
 }

.butbox:hover .button:hover{
    transform: scale(1.1);
    -webkit-transform: scale(1.1);
    transition: 0.2s ease-in-out;
    -webkit-transition: 0.2s ease-in-out;
}

.addbutton {
    background: rgb(50,99,0);
}

.butbox:hover .addbutton .add1{
    background: rgb(24,160,14);
    position: absolute;
    top: 39.5%;
    left: 10%;
    width: 80%;
    height: 20%;
    z-index: 2;
}
.butbox:hover .addbutton .add2{
    background: rgb(24,160,14);
    position: absolute;
    top: 39.5%;
    left: 10%;
    width: 80%;
    height: 20%;
    z-index: 2;
    transform: rotate(-90deg);
}


/**/
.delbutton {
    background: rgb(99,20,10);
}

.butbox:hover .delbutton .rm1{
    background: rgb(160,24,14);
    position: absolute;
    top: 39.5%;
    left: 6%;
    width: 90%;
    height: 20%;
    transform: rotate(45deg);
    z-index: 2;
}
.butbox:hover .delbutton .rm2{
    background: rgb(160,24,14);
    position: absolute;
    top: 39.5%;
    left: 6%;
    width: 90%;
    height: 20%;
    z-index: 2;
    transform: rotate(-45deg);
}

/* hidbutton */
.childless .hidbutton {
    width: 1em;
    height: 0.3em;
    top: 0.5em;
    transition: 0.1s ease-in;
}
.childless .hidbutton .hid1 {
	display: none;
}


.hidbutton {
    top: 0em;
    position: relative;
    background: rgb(110,110,20);
}

.hidbutton .hid1 {
    background: rgb(160,160,20);
    position: absolute;
    top: 39.5%;
    left: 10%;
    width: 80%;
    height: 20%;
    z-index: 2;
}

.hidbutton .hid2 {
    display:none;
}


.hidbutton-show .hid2{
    background: rgb(160,160,20);
    display: block;
    position: absolute;
    top: 39.5%;
    left: 10%;
    width: 80%;
    height: 20%;
    z-index: 2;
    transform: rotate(-90deg);
}

.dragbutton {
    background: rgb(20,00,99);
}


/*
// modal
*/

.modal:before {
    content: "";
    display: block;
    background: #333;
    position: fixed;
    top:0; left: 0; right: 0; bottom:0;
    z-index: 10;
    animation-name: fadein;
    -webkit-animation-name: fadein;
    animation-iteration-count: 1;
    -webkit-animation-iteration-count: 1;
    animation-timing-function: ease-out;
    -webkit-animation-timing-function: ease-out;
    animation-duration: 0.4s;
    -webkit-animation-duration: 0.4s;
    animation-fill-mode: forwards;
    -webkit-animation-fill-mode: forwards;
}


.modal-diag {
    position: fixed;
    top: 20%;
    left: 50%;
    margin-left:-180px;
    padding: 20px;
    border-radius: 2px;
    width: 360px;
    box-shadow: 2px 2px 5px 6px #222;
    /*margin-left: auto;*/
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    z-index: 11;
    opacity: 1.0;
}

.pushbtn{
    background: rgb(70,70,70);
    border: 0px;
    border-radius: 2px;
    color: rgb(150,150,150);
    font-size: medium;
    margin: 2px;
    padding: 5px 5px;
    text-decoration: none;
    min-width: 80px;
}

.pushbtn:hover{
	color: rgb(190,190,190);
}

.pushbtn:active{
    background: rgb(60,60,60);
}


#login form{
    margin: 40px auto;
}

#login div{
    margin: 10px;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.modal-diag.drop {
    animation-name: dropdiag;
    -webkit-animation-name: dropdiag;
    animation-iteration-count: 1;
    -webkit-animation-iteration-count: 1;
    animation-timing-function: ease-out;
    -webkit-animation-timing-function: ease-out;
    animation-duration:0.5s;
    -webkit-animation-duration:0.5s;
}

.modal-diag.away {
    animation-name: updiag;
    -webkit-animation-name: updiag;
    animation-iteration-count: 1;
    -webkit-animation-iteration-count: 1;
    animation-timing-function: ease-out;
    -webkit-animation-timing-function: ease-out;
    animation-duration: 0.5s;
    -webkit-animation-duration: 0.5s;
    animation-fill-mode: forwards;
    -webkit-animation-fill-mode: forwards;
}

/*
 * Animations
 */

@keyframes fadein {
      0% {opacity: 0.0;}
    100% {opacity: 0.6;}
}

@-webkit-keyframes fadein {
      0% {opacity: 0.0;}
    100% {opacity: 0.6;}
}


@keyframes dropdiag {
    0% {transform: translateY(-400px);}
    100% {transform: translateY(0);}
}
@-webkit-keyframes dropdiag {
    0% {-webkit-transform: translateY(-400px);}
    100% {-webkit-transform: translateY(0);}
}

@keyframes updiag{
    0% {transform: translateY(0);}
    35% {transform: translateY(10px);}
    100% {transform: translateY(-400px);}
}
@-webkit-keyframes updiag{
    0% {-webkit-transform: translateY(0);}
    35% {-webkit-transform: translateY(10px);}
    100% {-webkit-transform: translateY(-400px);}
}
/*
 * Shifting due to inserting and reordering
 */
.shift-down{
    transform: translateY(40px);
    transition: 0.2s ease-in;
}

.shift-back-up{
	transform: translateY(0px);
	transition: 0.2s ease-in;
}

.erase{
	animation-name: scaleup;
	-webkit-animation-name: scaleup;
	animation-iteration-count: 1;
	-webkit-animation-iteration-count: 1;
	animation-timing-function: ease-in;
	-webkit-animation-timing-function: ease-in;
	animation-duration: 0.3s;
	-webkit-animation-duration: 0.3s;
	animation-fill-mode: forwards;
	-webkit-animation-fill-mode: forwards;
	overflow: hidden;
}
.new{
	animation-name: scaledown;
	-webkit-animation-name: scaledown;
	animation-iteration-count: 1;
	-webkit-animation-iteration-count: 1;
	animation-timing-function: ease-in;
	-webkit-animation-timing-function: ease-in;
	animation-duration: 0.1s;
	-webkit-animation-duration: 0.1s;
	animation-fill-mode: forwards;
	-webkit-animation-fill-mode: forwards;
	overflow: hidden;
}
@keyframes scaleup{
	0% {
		max-height:25px;
		margin-top:15px;
	}
	100%{
		max-height: 0;
		margin-top:0px;
	}
}
@keyframes scaledown{
	0%{
		max-height: 0;
		margin-top:0px;
	}
	100% {
		max-height:25px;
		margin-top:15px;
	}
}


.move-back{
	transform: translateX(0px) translateY(0px);
	transition: 0.5s ease-in;
}

.move-right{
    transform: translateX(10px);
    transition: 0.2s ease-in;
}
.move-back-left{
    transform: translateX(0px);
    transition: 0.2s ease-in;
}

.above{
	z-index: 5;
	position: absolute;
	top: 0px;
	left: 0px;
	box-shadow: 2px 2px 5px 6px #222;
	background: rgb(40,40,40);
}

.temp {
	width: 200px;
	height: 25px;
	margin-top:15px;
}
.shrink {
	transform: scaleY(0.0);
	transition: 0.2s ease-in;
}

